--- a/hypr/.config/hypr/modules/autostart.conf
+++ b/hypr/.config/hypr/modules/autostart.conf
@@ -1,5 +1,5 @@
 exec-once = hyprpaper
-exec-once = waypaper --random
+exec-once = /home/aditya/.local/bin/pywal-hyprland-theme
 exec-once = waybar
 exec-once = hypridle
 exec-once = dunst -conf .config/dunst/dunstrc
