--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -1,8 +1,8 @@
 [Settings]
 language = en
 folder = ~/Dotfiles/wallpapers/Pictures/Wallpaper
-wallpaper = ~/Dotfiles/wallpapers/Pictures/Wallpaper/default.jpg
-	~/Dotfiles/wallpapers/Pictures/Wallpaper/abandoned-trainstation.jpg
+wallpaper = ~/Dotfiles/wallpapers/Pictures/Wallpaper/pixel-car.png
+	~/Dotfiles/wallpapers/Pictures/Wallpaper/clouds-2.png
 backend = hyprpaper
 monitors = DP-1
 	eDP-1
